--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,27 @@
 <div class="container main-container">
 
     <h1 class="text text-success">ChatFirebase</h1>
-    <div class="chat-window">
 
+    <div class="col-md-12 text-center" *ngIf="chatService.usuario.uid">
+        <button class="btn btn-outline-danger" (click)='chatService.logout()'>Salir</button>
+    </div>
+
+    <app-login *ngIf="!chatService.usuario.uid"></app-login>
+
+
+    <div *ngIf="chatService.usuario.uid" class="chat-window">
         <app-chat></app-chat>
 
     </div>
+
+
+
+
+
 </div>
 
 
 
 
-<!-- <h1 class=" mt3 ml3 text bg-left ">chatFirebase</h1>
-
-
-<div class="row m4">
-    <div class="col m3">
-        <ul>
-            <li class="text" *ngFor="let chat of chats | async">
-                {{chat.message}}
-                <h3 class="text text-success">mensajes cargados</h3>
-            </li>
-        </ul>
-    </div>
-</div>
--->
 
 <router-outlet></router-outlet>
