--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,28 +1,19 @@
 <h1>
-
     chat</h1>
 <hr>
 
 
 <div class="app-mensajes" id="app-mensajes">
 
-    <div style="text-align: right;">
-        <span class="badge bg-primary">
-            Javier
+    <div *ngFor="let chat of chatService.chats" [ngClass]="{'align': chatService.usuario.uid == chat.uid}">
+        <span class="badge" [ngClass]="{'bg-primary': chatService.usuario.uid == chat.uid, 'bg-success' : chatService.usuario.uid != chat.uid}">
+            {{chat.nombre}}
         </span>
         <p>
-            Mensaje de javier
+            {{chat.message}}
         </p>
     </div>
 
-    <div>
-        <span class="badge bg-success">
-            Martin
-        </span>
-        <p>
-            Mensaje de martin
-        </p>
-    </div>
 </div>
 
 <input type="text" placeholder="Escribe un mensaje" (keyup.enter)="enviar_mensaje()" [(ngModel)]="mensaje" class="form-control">
