--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -15,5 +15,14 @@
     </div>
 
 </div>
-
-<input type="text" placeholder="Escribe un mensaje" (keyup.enter)="enviar_mensaje()" [(ngModel)]="mensaje" class="form-control">
+<div class="row">
+    <div class="col-9">
+        <input type="text" placeholder="Escribe un mensajes" (keyup.enter)="enviar_mensaje()" [(ngModel)]="mensaje" class="form-control">
+    </div>
+    <div class="col align-self-end">
+        <button class="btn btn-outline-info" (click)="enviar_mensaje()">
+            <i class="fa fa-arrow-right">
+            </i>
+        </button>
+    </div>
+</div>
